src/objects/Case_Management_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ACK_Check_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check here if no support is needed</description>
        <label>Check here if no support is needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACK_Errors__c</fullName>
        <label>ACK_Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACK_Family_Needed_Family__c</fullName>
        <description>Does this ISP reflect what is needed for the family to effectively provide supports?</description>
        <label>ISP Reflect needed family</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_ISP_Describe__c</fullName>
        <description>Describe the reason for any question above remaining “no” and the plan to address it</description>
        <label>Describe the Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACK_ISP_Independence__c</fullName>
        <description>Independence: Having control and choice over one’s own life</description>
        <label>Independence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_ISP_Integration__c</fullName>
        <description>Integration: Living near and using the same community resources and participating in the same activities as, and together with, people without disabilities</description>
        <label>Integration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_ISP_Productivity__c</fullName>
        <description>Productivity: Engaging in contributions to a household or community; or engaging in income-producing work that is measured through improvements in income level, employment status, or job advancement</description>
        <label>Productivity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_PR_ISP_Development__c</fullName>
        <description>Did the person choose who participated in their ISP development?</description>
        <label>ISP development participation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_PR_ISP_Meeting_Location__c</fullName>
        <description>Did the person choose the location of their ISP meeting?</description>
        <label>ISP Meeting Location?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_PR_Provided_Info_Planning__c</fullName>
        <description>Has the person been provided information about the planning process and how to request changes and updates to the ISP?</description>
        <label>Person Provided Info Planning Process</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_PR_Recieve_DHR__c</fullName>
        <description>Did the person receive notification of his/her DHS rights?</description>
        <label>Notification DHS Rights?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_PR_Reflect_Services__c</fullName>
        <description>Does this ISP reflect the services the person chooses and the outcomes the person wants to work toward?</description>
        <label>ISP Reflect Services Person Chooses</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_PR_SCPA_Review__c</fullName>
        <description>Did the SC/PA review the services that are available to the person?</description>
        <label>Did SC/PA Review Services</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ACK_Understand_Rights__c</fullName>
        <description>Describe the supports the person needs to understand his/her rights or to understand this plan, if any</description>
        <label>Support Person needs to understand Right</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACK_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACK_isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Errors__c</fullName>
        <label>Agreement Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreement isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMS_Errors__c</fullName>
        <label>CCMS Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCMS_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CCMS isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCM_Chosen_Provider__c</fullName>
        <label>Chosen Provider</label>
        <picklist>
            <picklistValues>
                <fullName>MENTOR OR Metro Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MENTOR OR Mid-Valley Brokerage</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCM_Descriptors__c</fullName>
        <defaultValue>&quot;Assessment and periodic reassessment of individual needs.&quot;&amp;BR()&amp;
&quot;These annual (more frequent with significant change in condition) assessment activities include:&quot;&amp;BR()&amp;
&quot;- Taking client history.&quot;&amp;BR()&amp;
&quot;- Evaluation of the nature and extent of recipient\&apos;s (medical, social, educational and other) needs.&quot;&amp;BR()&amp;
&quot;- Reviewing documentation and gathering information from other sources if necessary to form a complete assessment of the individual.&quot;&amp;BR()&amp;
&quot;Development and periodic revision of a specific care plan that:&quot;&amp;BR()&amp;
&quot;- Is based on the information collected through the assessment.&quot;&amp;BR()&amp;
&quot;- Specifies the goals and actions to address the medical, social, educational, and other services needed by the individual.&quot;&amp;BR()&amp;
&quot;- Includes activities that insure the active participation of the individual and working with the individual (or their authorized health care decision maker and others) to develop these goals.&quot;&amp;BR()&amp;
&quot;- Identifies a course of action to respond to the assessed needs of the eligible individual.&quot;&amp;BR()&amp;
&quot;Referral and related activities to help and eligible individual obtain needed services, including activities that help link an individual with:&quot;&amp;BR()&amp;
 &quot;- Medical, social, and educational providers&quot;&amp;BR()&amp;
&quot;- Other programs and services capable of providing the needed services to address identified needs and achieve goals specified in the care plan, such as making referrals to providers for needed services and scheduling appointments for the individual.&quot;&amp;
&quot;Monitoring and follow-up activities (activities and contact necessary to ensure that care plan is implemented and adequately addressing the individual\&apos;s needs).&quot; &amp; &quot;The activities and contact may be with the individual and/or his or her family members, providers, and other entities or individuals and may be conducted as frequently as necessary, including at least one annual monitoring to assure that the following conditions are being met:&quot;&amp;BR()&amp;
&quot;- Services are being furnished in accordance with the individual\&apos;s care plan.&quot;&amp;BR()&amp;
&quot;- Services in the care plan are adequate.&quot;&amp;BR()&amp;
&quot;- If there are changes in the needs or status of the individual, necessary adjustments are made to the care plan and to service arrangements with providers.&quot;</defaultValue>
        <description>Case management comments/descriptors of anticipated case management services during the year</description>
        <label>Comments/Descriptors</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCM_End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCM_Frequency_Monitoring__c</fullName>
        <description>Required frequency of case management monitoring</description>
        <label>Frequency of case management monitoring</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly case management monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly case management monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other case management monitoring</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCM_Persons_Preference__c</fullName>
        <description>Person’s preference on how case management is provided</description>
        <label>Preference on how CM is Provided</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCM_Same_as_Plan_year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Plan Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCM_Specify_Other__c</fullName>
        <label>Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCM_Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Waiver Case Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Waiver Case Management</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_DE_Additional_Info__c</fullName>
        <description>Share any additional information about this decision here:</description>
        <label>Additional Info on Employment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_DE_Explain_Now_Future__c</fullName>
        <description>If the answer was “no” to #1  and/or #2, please explain why the person does not want  work now and/or in the future:</description>
        <label>Explain Why person does not work</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_DE_Opportunity_to_Skills__c</fullName>
        <description>Has the person had an opportunity to experience integrated employment that meets his/her skills and interests?</description>
        <label>Does person have opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_DE_Person_Change_mind__c</fullName>
        <description>Does the person understand that he/she can change his/her mind at any time during the next twelve months and decide to pursue, explore, or obtain individual, integrated employment?</description>
        <label>Change Mind Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_DE_Person_int_Emp__c</fullName>
        <description>Does the person want to work now in integrated employment?</description>
        <label>Does Person Int Employment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_DE_Person_int_Future__c</fullName>
        <description>Does the person want to work in integrated employment in the future?</description>
        <label>Person int Emp Future</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_DE_int_Emp_Exp__c</fullName>
        <description>If “yes,” please briefly describe his/her integrated employment experience</description>
        <label>Explain yes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_DE_remedy_Situation__c</fullName>
        <description>If “no,” please describe why he/she has not had this opportunity and if there is a plan to remedy this situation</description>
        <label>Explain Remedy for non emplyment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_Education_Level_Completed__c</fullName>
        <label>Education Level Completed</label>
        <picklist>
            <picklistValues>
                <fullName>Early childhood education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kindergarten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grade 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High school - modified or alternate certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High school - diploma or GED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College education or more</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_Errors__c</fullName>
        <label>Career Development Plan Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Career Development Plan IsValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDP_NE_Check_Apply_Decision_Not_Explore__c</fullName>
        <label>Check all that Apply</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_NE_Not_to_explore_Describe__c</fullName>
        <label>Describe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDP_STU_Choose_One_Students__c</fullName>
        <description>Choose one of the following statements</description>
        <label>Choose one</label>
        <picklist>
            <picklistValues>
                <fullName>Attending school and wants to work now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending school and receiving employment supports elsewhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Has an IEP Post-Secondary Goal with employment or training focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attending school and not receiving any employment supports</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_STU_Date_CDP_Completed__c</fullName>
        <label>Date by which CDP will be completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDP_STU_Enable_Student_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check here to enable the Student section</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDP_STU_Expected_date_exit_from_school__c</fullName>
        <label>Expected date of exit from school</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDP_STU_VR_Status_Explain__c</fullName>
        <label>Explain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDP_STU_VR_Status__c</fullName>
        <description>Status with Vocational Rehabilitation (VR) (age 16 and up)</description>
        <label>Vocation Rehaabiliation Status (VR)</label>
        <picklist>
            <picklistValues>
                <fullName>Currently receiving VR services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Want a referral to VR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_WA_Check_Apply_int_Employment__c</fullName>
        <label>Check all that Apply</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_WA_Check_Apply_nonworking__c</fullName>
        <label>Check all that Apply</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_WA_Choose_One_workingadults__c</fullName>
        <description>Choose one of the following statements</description>
        <label>Choose one of the following statements</label>
        <picklist>
            <picklistValues>
                <fullName>Employed in integrated employment and chooses to:</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently not working in integrated employment and chooses to:</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CDP_WA_Enable_Working_Age_Section__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check here to enable the Working Age Adults section</description>
        <label>Check here to enable the Working Age Adu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDP_WA_Intgrated_job_obstacle_Addressed__c</fullName>
        <label>How will this obstacle be addressed?</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CDP_WA_Potential_Barriers_integrated_job__c</fullName>
        <label>Barriers to Working an Integrated Job</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DIF_Plan_and_OtherISP__c</fullName>
        <description>Note any differences between the contents of this plan and what any other ISP contributor wants</description>
        <label>Diff b/w Plan and Other ISP wants</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DIF_Plan_and_Person__c</fullName>
        <description>Note any differences between the contents of this plan and what the person wa</description>
        <label>Diff b/w Plan and what the person wants</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Outcomes_IsValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desired Outcomes IsValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Desired_outcomes_Errors__c</fullName>
        <label>Desired_outcomes_Errors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Differences_Errors__c</fullName>
        <label>Differences Errors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Differences_Isvalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Differences_Isvalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Errors__c</fullName>
        <label>Evaluation_Errors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Evaluation_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPR_Additional_Services__c</fullName>
        <description>Additional K Plan services included in residential services</description>
        <label>K Plan Additional Services</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPR_Chosen_Provider__c</fullName>
        <label>Chosen Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KPR_End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPR_Errors__c</fullName>
        <label>KPR Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPR_Included_Services__c</fullName>
        <defaultValue>&quot;Attendant care – ADL / IADL;Skill training;Community Transportation&quot;</defaultValue>
        <description>The K Plan services already included in residential services</description>
        <label>K plan Services Included</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPR_List_Needs_Identified__c</fullName>
        <description>List identified needs that this service will address</description>
        <label>List Needs Identified</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPR_Person_Preference_Service__c</fullName>
        <description>Person’s preference on how this service is delivered</description>
        <label>Person&apos;s Preference on Service</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KPR_Residential_Secton_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residential Secton Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPR_Same_as_Plan_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Plan Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPR_Service_Setting__c</fullName>
        <label>Service Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Non-relative Foster Care - Adults DD 58</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-relative Foster Care - Children DD 58</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SACU DD 141</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supported Living Services DD 51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24-hour Residential - Adult DD 50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24-hour Residential - Children DD 142</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24-hour Residential - APD DD 50</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KPR_Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KPR_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KPR isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>K_Plan_Section_Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>K Plan Section Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kplan_Errors__c</fullName>
        <label>Kplan Errors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kplan_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kplan isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leg_Any_other_Legal_Documents__c</fullName>
        <description>Any other Legal Documents on file limiting personal decision making</description>
        <label>Any other legal documents</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leg_Appointment_Date__c</fullName>
        <label>Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leg_Conservators__c</fullName>
        <label>Conservator(s), if any</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Designated_Representative_Employer__c</fullName>
        <description>Designated Representative(s) for employer representative/employer of record issues, if any</description>
        <label>Designated Representative(s) for employe</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Designated_Representative_Planning__c</fullName>
        <description>Designated Representative(s) for service planning, if any</description>
        <label>Designated Representative(s) S.Planning</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Errors__c</fullName>
        <label>Legal Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Leg_Guardians__c</fullName>
        <description>Legal Representative/Guardian(s), if any</description>
        <label>Legal Representative/Guardian(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Health_Care_Representative__c</fullName>
        <label>Health Care Representative, if any</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Parents__c</fullName>
        <description>Parent(s) of minor child who retain parental rights</description>
        <label>Parent(s) of minor child</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Representative_Payee__c</fullName>
        <label>Representative Payee(s), if any</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Scope_of_authority__c</fullName>
        <label>Scope of authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leg_Type_of_Appointment__c</fullName>
        <inlineHelpText>Check with kristen</inlineHelpText>
        <label>Type of Appointment</label>
        <picklist>
            <picklistValues>
                <fullName>Self-Appointed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISP Team Appointed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leg_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NaturalSupports_Errors__c</fullName>
        <label>NaturalSupports_Errors</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NaturalSupports_isValid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NaturalSupports isValid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PD_End__c</fullName>
        <label>End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PD_Errors__c</fullName>
        <label>Plan Dates Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PD_Isvalid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan Dates Isvalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PD_Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Profile_Errors__c</fullName>
        <label>One Page Profile Errors</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_How_best_to_support__c</fullName>
        <label>How best to support</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>